--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -128,6 +128,7 @@ jobs:
     name: Stage And Publish Artifacts
     runs-on: ubuntu-latest
     needs: build
+    if: github.event_name != 'pull_request'
     steps:
     - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
     - name: Set up QEMU
